--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/packages/Microsoft.VisualStudio.Azure.Fabric.MSBuild.1.6.8
+/.vs/Application/v15/Server/sqlite3
